--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/arm-keyvault": "^3.0.0",
     "@azure/arm-resources": "^5.2.0",
     "@azure/identity": "^3.1.4"
   }
