--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 on: [push,workflow_dispatch]
 
+permissions:
+    id-token: write
+    contents: read
+
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
