--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,9 @@ permissions:
     contents: read
 
 jobs:
-  hello_world_job:
+  az_destroyer_job:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: Testing action
     steps:
       - name: Az login
         uses: azure/login@v1
