--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
             tenant-id: ${{ secrets.AZURE_TENANT_ID }}
             subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       - name: Az Resource Destroyer
-        uses: jonasssa/az-destroyer-of-resources@v1.1
+        uses: jonasssa/az-destroyer-of-resources@main
